--- a/west-garden.html
+++ b/west-garden.html
@@ -673,7 +673,8 @@
                               <div class="variantsFinishing-imgTextBlockImg-shorts variantsFinishing-imgTextBlockImg-shortsText variantsFinishing-imgTextBlock_margin variantsFinishing-imgTextBlockImg-shortsText_black">
                                  <img src="../Сайт_6/img/png/roundsblack.png">
                                  <div class="variantsFinishing-imgTextBlockImg-shortsTextH variantsFinishing-imgTextBlockImg-shortsTextH_black">особенности интерьера</div>
-                                 <div class="variantsFinishing-imgTextBlockImg-shortsTextT">Сочетание белых стен и светлой напольной доски с текстурой дерева расширяет пространство, формируя гармоничную, наполненную светом атмосферу</div>
+                                 <div class="variantsFinishing-imgTextBlockImg-shortsTextT">Отделка в тёмном варианте формируется за счет нейтральных оттенков стен, а также напольной доски, выполненной в цвете темного дерева
+                                 </div>
                               </div>
                            </div>
                            <div class="variantsFinishing-imgTextBlock">
